# rust_practice_2

./: Cargo.toml  fungang.rp2  funnergang.rp2
examples/: funnergang.rp2
fuzz/: Cargo.toml
fuzz/fuzz_targets/: deserializer.rs
src/: lib.rs  main.rs
src/base/: animal.rs  entity.rs  gender.rs  mod.rs
src/tui/: cmd_add.rs  cmd_count.rs  cmd_edit.rs  cmd_search.rs  file_cmds.rs  mod.rs  primitives.rs  small_cmds.rs
src/util/: flexistring.rs  mod.rs  serializer.rs
